update theme and driver fetch

--- a/contact.html
+++ b/contact.html
@@ -10,164 +10,12 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@400;600;700&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/base.css">
   <style>
-    :root {
-      --bg:
-        radial-gradient(900px 600px at 8% 0%, #fff7fb 0%, #ffffff 42%),
-        radial-gradient(1200px 700px at 92% 8%, #f2f8ff 0%, #ffffff 48%),
-        radial-gradient(1200px 800px at 50% 96%, #f6fff7 0%, #ffffff 56%);
-      --surface: rgba(255, 255, 255, 0.78);
-      --text: #1b1e22;
-      --muted: #5b6471;
-      --ring: rgba(12, 21, 33, .12);
-      --accent: #6fa387;
-      --btn-bg: #fff;
-      --btn-text: #111;
-      --btn-border: #d7dde5;
-      --maxw: 940px;
-    }
-
-    :root[data-theme="carlos"] {
-      --bg: #dbe6ff;
-      --surface: #fff;
-      --text: #0b1220;
-      --muted: #3f527a;
-      --ring: rgba(0, 0, 0, .12);
-      --accent: #0d347e;
-      --btn-bg: #fff;
-      --btn-text: #0b1220;
-      --btn-border: #3260b3;
-    }
-
-    :root[data-theme="lando"] {
-      --bg: #0f0f10;
-      --surface: #1b1b1d;
-      --text: #f3f4f6;
-      --muted: #e2e6ee;
-      --ring: #2d2f33;
-      --accent: #ff8000;
-      --btn-bg: #232325;
-      --btn-text: #f3f3f3;
-      --btn-border: #3a3a3d;
-    }
-
-    * {
-      box-sizing: border-box
-    }
-
-    ::selection {
-      background: color-mix(in oklab, var(--accent) 38%, #ffffff);
-      color: #0b2b20;
-    }
-
     body {
-      margin: 0;
-      background: var(--bg);
       background-attachment: fixed;
       background-repeat: no-repeat;
-      background-size: 140% 140%, 150% 150%, 120% 120%;
-      animation: aurora-float 18s ease-in-out infinite alternate;
-      color: var(--text);
-      font: 16px/1.65 Inter, system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
-    }
-
-    @keyframes aurora-float {
-      0% {
-        background-position: 0% 0%, 100% 0%, 50% 100%
-      }
-
-      100% {
-        background-position: 0% 22%, 100% -12%, 50% 78%
-      }
-    }
-
-    h1,
-    h2 {
-      font-family: "Playfair Display", Georgia, serif
-    }
-
-    .container {
-      max-width: var(--maxw);
-      margin: 0 auto;
-      padding: 0 22px
-    }
-
-    header.site {
-      position: sticky;
-      top: 0;
-      z-index: 10;
-      background: rgba(255, 255, 255, 0.65);
-      backdrop-filter: blur(8px);
-      border-bottom: 1px solid var(--ring)
-    }
-
-    :root[data-theme="lando"] header.site {
-      background: rgba(18, 18, 20, 0.65)
-    }
-
-    .site-inner {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      height: 64px
-    }
-
-    .brand {
-      display: flex;
-      gap: 12px;
-      align-items: center;
-      font-weight: 800
-    }
-
-    .nav a {
-      margin-left: 14px;
-      color: var(--text);
-      font-weight: 700;
-      text-decoration: none
-    }
-
-    .nav a:hover {
-      color: var(--accent)
-    }
-
-    .avatar {
-      width: 60px;
-      height: 60px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 2px solid color-mix(in oklab, var(--accent) 40%, #fff)
-    }
-
-    .avatar-wrap {
-      position: relative;
-      display: inline-block
-    }
-
-    .avatar-badge {
-      position: absolute;
-      right: -5px;
-      bottom: -5px;
-      width: 28px;
-      height: 28px;
-      border-radius: 50%;
-      background: #fff;
-      border: 2px solid var(--ring);
-      display: grid;
-      place-items: center;
-      font: 700 12px/1 "Playfair Display", serif;
-      color: var(--accent)
-    }
-
-    :root[data-theme="carlos"] .avatar-badge {
-      background: #fff url("assets/img/williams.png") center/80% no-repeat;
-      font-size: 0;
-      border-color: #0d347e
-    }
-
-    :root[data-theme="lando"] .avatar-badge {
-      background: #fff url("assets/img/mclaren.png") center/80% no-repeat;
-      font-size: 0;
-      border-color: #ff8000
+      background-size: 140% 140%, 150% 150%, 120% 120%
     }
 
     .page {
@@ -189,23 +37,6 @@
       color: var(--muted)
     }
 
-    .btn {
-      appearance: none;
-      border: 1px solid var(--btn-border);
-      background: var(--btn-bg);
-      color: var(--btn-text);
-      padding: 10px 14px;
-      border-radius: 12px;
-      font-weight: 700;
-      cursor: pointer
-    }
-
-    .btn:hover {
-      background: var(--accent);
-      color: #fff;
-      border-color: transparent
-    }
-
     .grid {
       display: grid;
       gap: 28px;
@@ -219,7 +50,7 @@
     }
 
     .card {
-      background: linear-gradient(180deg, rgba(255, 255, 255, 0.92), rgba(255, 255, 255, 0.76));
+      background: linear-gradient(180deg, rgba(255, 255, 255, .92), rgba(255, 255, 255, .76));
       border: 1px solid var(--ring);
       border-radius: 18px;
       padding: 20px 22px;
@@ -372,13 +203,6 @@
       color: var(--muted);
       font-size: 13px
     }
-
-    footer {
-      border-top: 1px solid var(--ring);
-      padding: 18px 0;
-      color: var(--muted);
-      text-align: center
-    }
   </style>
 </head>
 
@@ -432,15 +256,13 @@
           </div>
           <div class="row">
             <div class="label">Urgency</div>
-            <div class="inline">
-              <select class="select" id="urgency">
+            <div class="inline"><select class="select" id="urgency">
                 <option value="">No rush</option>
                 <option value="ASAP">ASAP</option>
                 <option value="This week">This week</option>
                 <option value="1–2 weeks">1–2 weeks</option>
                 <option value="Next month">Next month</option>
-              </select>
-            </div>
+              </select></div>
           </div>
           <div class="row">
             <div class="label">Subject</div><input class="input" id="subject"
@@ -460,8 +282,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="label">Message</div>
-            <textarea class="textarea" id="message"
+            <div class="label">Message</div><textarea class="textarea" id="message"
               placeholder="Hi Katherine —&#10;&#10;I’m reaching out about [topic]. My timeline is [urgency]. Here’s the context…&#10;&#10;Best,&#10;[Your name]"></textarea>
           </div>
           <div class="actions"><button class="btn" id="buildMail">Open in Email ✉️</button><button class="btn"
@@ -498,39 +319,21 @@
   </footer>
 
   <script src="assets/js/confetti.js"></script>
+  <script src="assets/js/theme.js"></script>
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
-    const root = document.documentElement; const saved = localStorage.getItem('kc-theme'); if (saved) root.setAttribute('data-theme', saved);
-    function setThemeAndConfetti(n) {
-      if (n === 'carlos') { root.setAttribute('data-theme', 'carlos'); localStorage.setItem('kc-theme', 'carlos'); startThemedConfetti('carlos'); }
-      if (n === 'lando') { root.setAttribute('data-theme', 'lando'); localStorage.setItem('kc-theme', 'lando'); startThemedConfetti('lando'); }
-    }
     document.querySelectorAll('button[data-theme]').forEach(b => b.addEventListener('click', () => setThemeAndConfetti(b.dataset.theme)));
-    document.getElementById('resetTheme').addEventListener('click', () => { root.removeAttribute('data-theme'); localStorage.removeItem('kc-theme'); void document.body.offsetHeight; startEmojiConfetti(); });
+    document.getElementById('resetTheme').addEventListener('click', resetTheme);
 
-    const topicWrap = document.getElementById('topicWrap'), subjectEl = document.getElementById('subject'),
-      urgencyEl = document.getElementById('urgency'), msgEl = document.getElementById('message');
+    const topicWrap = document.getElementById('topicWrap'), subjectEl = document.getElementById('subject'), urgencyEl = document.getElementById('urgency'), msgEl = document.getElementById('message');
     let topic = "";
-    topicWrap.addEventListener('click', (e) => {
-      const b = e.target.closest('.chip'); if (!b) return;[...topicWrap.querySelectorAll('.chip')].forEach(c => c.classList.remove('active'));
-      b.classList.add('active'); topic = b.dataset.topic;
-      if (!subjectEl.value) { const urg = urgencyEl.value ? ` — ${urgencyEl.value}` : ""; subjectEl.value = `${topic}${urg}`; }
-      if (!msgEl.value) { msgEl.value = `Hi Katherine —\n\nI’m reaching out about ${topic.toLowerCase()}. My timeline is ${urgencyEl.value || "flexible"}.\n\nBest,\n[Your name]`; }
-    });
-    function updateSubjectForUrgency() { const urg = urgencyEl.value; if (!subjectEl.value || /^([A-Za-z ]+)( — .+)?$/.test(subjectEl.value)) { const base = topic || "Opportunity"; subjectEl.value = urg ? `${base} — ${urg}` : base; } }
+    topicWrap.addEventListener('click', (e) => { const b = e.target.closest('.chip'); if (!b) return;[...topicWrap.querySelectorAll('.chip')].forEach(c => c.classList.remove('active')); b.classList.add('active'); topic = b.dataset.topic; if (!subjectEl.value) { const urg = urgencyEl.value ? ` — ${urgencyEl.value}` : ""; subjectEl.value = `${topic}${urg}`; } if (!msgEl.value) { msgEl.value = `Hi Katherine —\n\nI’m reaching out about ${topic.toLowerCase()}. My timeline is ${urgencyEl.value || "flexible"}.\n\nBest,\n[Your name]`; } })
+    function updateSubjectForUrgency() { const urg = urgencyEl.value; if (!subjectEl.value || /^([A-Za-z ]+)( — .+)?$/.test(subjectEl.value)) { const base = topic || "Opportunity"; subjectEl.value = urg ? `${base} — ${urg}` : base } }
     urgencyEl.addEventListener('change', updateSubjectForUrgency);
-    const templates = {
-      intro: `Hi Katherine —\n\nQuick hello. Timeline: ${urgencyEl.value || "flexible"}.\n\nBest,\n[Your name]`,
-      collab: `Hi Katherine —\n\nCollaboration idea around ${topic || "a feature"}.\nTimeline: ${urgencyEl.value || "flexible"}.\n\nThanks!\n[Your name]`,
-      recruiter: `Hi Katherine —\n\nI think your background could match roles we have. Timeline: ${urgencyEl.value || "this month"}.\n\nBest,\n[Recruiter]`,
-      feedback: `Hi Katherine —\n\nTried your project—feedback below.\nTimeline: ${urgencyEl.value || "whenever"}.\n\nCheers,\n[Your name]`
-    };
-    document.getElementById('applyTemplate').addEventListener('click', () => {
-      const k = (document.getElementById('template').value || "").toLowerCase(); if (!k) return;
-      msgEl.value = templates[k] || msgEl.value; if (!subjectEl.value) { const base = (k === "collab" ? "Collaboration" : k === "recruiter" ? "Recruiting" : k === "feedback" ? "Feedback" : "Intro"); subjectEl.value = topic ? `${base}: ${topic}` : base; }
-    });
-    document.getElementById('buildMail').addEventListener('click', () => { const to = "katisabela125@gmail.com"; const subj = encodeURIComponent(subjectEl.value || "Hello from your site"); const body = encodeURIComponent(msgEl.value || "Hi Katherine —"); window.location.href = `mailto:${to}?subject=${subj}&body=${body}`; });
-    document.getElementById('copyAll').addEventListener('click', async () => { const all = `To: katisabela125@gmail.com\nSubject: ${subjectEl.value || "(none)"}\n\n${msgEl.value || ""}`; try { await navigator.clipboard.writeText(all); alert("Copied to clipboard!"); } catch { alert("Could not copy, sorry."); } });
+    const templates = { intro: `Hi Katherine —\n\nQuick hello. Timeline: ${urgencyEl.value || "flexible"}.\n\nBest,\n[Your name]`, collab: `Hi Katherine —\n\nCollaboration idea around ${topic || "a feature"}.\nTimeline: ${urgencyEl.value || "flexible"}.\n\nThanks!\n[Your name]`, recruiter: `Hi Katherine —\n\nI think your background could match roles we have. Timeline: ${urgencyEl.value || "this month"}.\n\nBest,\n[Recruiter]`, feedback: `Hi Katherine —\n\nTried your project—feedback below.\nTimeline: ${urgencyEl.value || "whenever"}.\n\nCheers,\n[Your name]` };
+    document.getElementById('applyTemplate').addEventListener('click', () => { const k = (document.getElementById('template').value || "").toLowerCase(); if (!k) return; msgEl.value = templates[k] || msgEl.value; if (!subjectEl.value) { const base = (k === "collab" ? "Collaboration" : k === "recruiter" ? "Recruiting" : k === "feedback" ? "Feedback" : "Intro"); subjectEl.value = topic ? `${base}: ${topic}` : base } });
+    document.getElementById('buildMail').addEventListener('click', () => { const to = "katisabela125@gmail.com"; const subj = encodeURIComponent(subjectEl.value || "Hello from your site"); const body = encodeURIComponent(msgEl.value || "Hi Katherine —"); window.location.href = `mailto:${to}?subject=${subj}&body=${body}` });
+    document.getElementById('copyAll').addEventListener('click', async () => { const all = `To: katisabela125@gmail.com\nSubject: ${subjectEl.value || "(none)"}\n\n${msgEl.value || ""}`; try { await navigator.clipboard.writeText(all); alert("Copied to clipboard!") } catch { alert("Could not copy, sorry.") } });
   </script>
 </body>
 
