--- a/about.html
+++ b/about.html
@@ -49,11 +49,24 @@
     }
 
     .card {
-      background: linear-gradient(180deg, rgba(255, 255, 255, .92), rgba(255, 255, 255, .76));
+      background: linear-gradient(180deg, rgba(255, 255, 255, .96), rgba(255, 255, 255, .82));
       border: 1px solid var(--ring);
       border-radius: 16px;
       padding: 18px 20px;
-      box-shadow: 0 12px 28px rgba(12, 21, 33, .08), 0 2px 6px rgba(12, 21, 33, .05)
+      box-shadow: 0 12px 28px rgba(12, 21, 33, .08), 0 2px 6px rgba(12, 21, 33, .05);
+      color: var(--text)
+    }
+
+    :root[data-theme="lando"] .card {
+      background: linear-gradient(180deg, #232325, #1a1a1c);
+      border-color: #3a3a3d;
+      color: #fffaf1
+    }
+
+    :root[data-theme="carlos"] .card {
+      background: linear-gradient(180deg, #ffffff, #eef3ff);
+      border-color: #b7c7f7;
+      color: #0b1220
     }
 
     .race-wrap {
@@ -119,6 +132,10 @@
       100% {
         width: 100%
       }
+    }
+
+    footer {
+      text-align: center
     }
   </style>
 </head>
@@ -188,11 +205,10 @@
   </footer>
 
   <script src="assets/js/confetti.js"></script>
-  <script src="assets/js/theme.js"></script>
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
     document.querySelectorAll('button[data-theme]').forEach(b => b.addEventListener('click', () => setThemeAndConfetti(b.dataset.theme)));
-    document.getElementById('resetTheme').addEventListener('click', resetTheme);
+    document.getElementById('resetTheme').addEventListener('click', () => { document.documentElement.removeAttribute('data-theme'); localStorage.removeItem('kc-theme'); void document.body.offsetHeight; startEmojiConfetti() });
   </script>
 </body>
 
