--- a/contact.html
+++ b/contact.html
@@ -211,10 +211,6 @@
       color: var(--muted);
       font-size: 13px
     }
-
-    footer {
-      text-align: center
-    }
   </style>
 </head>
 
@@ -258,13 +254,11 @@
           </div>
           <div class="row">
             <div class="label">Topic</div>
-            <div class="topic-wrap" id="topicWrap">
-              <button class="chip" data-topic="Collaboration">Collaboration</button>
-              <button class="chip" data-topic="Internship">Internship</button>
-              <button class="chip" data-topic="Feedback">Feedback</button>
-              <button class="chip" data-topic="Speaking">Speaking</button>
-              <button class="chip" data-topic="Other">Other</button>
-            </div>
+            <div class="topic-wrap" id="topicWrap"><button class="chip"
+                data-topic="Collaboration">Collaboration</button><button class="chip"
+                data-topic="Internship">Internship</button><button class="chip"
+                data-topic="Feedback">Feedback</button><button class="chip"
+                data-topic="Speaking">Speaking</button><button class="chip" data-topic="Other">Other</button></div>
           </div>
           <div class="row">
             <div class="label">Urgency</div>
@@ -328,20 +322,20 @@
   </footer>
 
   <script src="assets/js/confetti.js"></script>
+  <script src="assets/js/theme.js"></script>
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
-    const root = document.documentElement; const saved = localStorage.getItem('kc-theme'); if (saved) root.setAttribute('data-theme', saved);
-    function setThemeAndConfetti(n) { if (n === 'carlos') { root.setAttribute('data-theme', 'carlos'); localStorage.setItem('kc-theme', 'carlos'); startThemedConfetti('carlos') } if (n === 'lando') { root.setAttribute('data-theme', 'lando'); localStorage.setItem('kc-theme', 'lando'); startThemedConfetti('lando') } }
     document.querySelectorAll('button[data-theme]').forEach(b => b.addEventListener('click', () => setThemeAndConfetti(b.dataset.theme)));
-    document.getElementById('resetTheme').addEventListener('click', () => { root.removeAttribute('data-theme'); localStorage.removeItem('kc-theme'); void document.body.offsetHeight; startEmojiConfetti() });
+    document.getElementById('resetTheme').addEventListener('click', resetTheme);
+
     const topicWrap = document.getElementById('topicWrap'), subjectEl = document.getElementById('subject'), urgencyEl = document.getElementById('urgency'), msgEl = document.getElementById('message'); let topic = "";
-    topicWrap.addEventListener('click', (e) => { const b = e.target.closest('.chip'); if (!b) return;[...topicWrap.querySelectorAll('.chip')].forEach(c => c.classList.remove('active')); b.classList.add('active'); topic = b.dataset.topic; if (!subjectEl.value) { const urg = urgencyEl.value ? ` — ${urgencyEl.value}` : ""; subjectEl.value = `${topic}${urg}` } if (!msgEl.value) { msgEl.value = `Hi Katherine —\n\nI’m reaching out about ${topic.toLowerCase()}. My timeline is ${urgencyEl.value || "flexible"}.\n\nBest,\n[Your name]` } })
+    topicWrap.addEventListener('click', (e) => { const b = e.target.closest('.chip'); if (!b) return;[...topicWrap.querySelectorAll('.chip')].forEach(c => c.classList.remove('active')); b.classList.add('active'); topic = b.dataset.topic; if (!subjectEl.value) { const urg = urgencyEl.value ? ` — ${urgencyEl.value}` : ""; subjectEl.value = `${topic}${urg}` } if (!msgEl.value) { msgEl.value = `Hi Katherine —\n\nI’m reaching out about ${topic.toLowerCase()}. My timeline is ${urgencyEl.value || "flexible"}.\n\nBest,\n[Your name]` } });
     function updateSubjectForUrgency() { const urg = urgencyEl.value; if (!subjectEl.value || /^([A-Za-z ]+)( — .+)?$/.test(subjectEl.value)) { const base = topic || "Opportunity"; subjectEl.value = urg ? `${base} — ${urg}` : base } }
     urgencyEl.addEventListener('change', updateSubjectForUrgency);
     const templates = { intro: `Hi Katherine —\n\nQuick hello. Timeline: ${urgencyEl.value || "flexible"}.\n\nBest,\n[Your name]`, collab: `Hi Katherine —\n\nCollaboration idea around ${topic || "a feature"}.\nTimeline: ${urgencyEl.value || "flexible"}.\n\nThanks!\n[Your name]`, recruiter: `Hi Katherine —\n\nI think your background could match roles we have. Timeline: ${urgencyEl.value || "this month"}.\n\nBest,\n[Recruiter]`, feedback: `Hi Katherine —\n\nTried your project—feedback below.\nTimeline: ${urgencyEl.value || "whenever"}.\n\nCheers,\n[Your name]` };
-    document.getElementById('applyTemplate').addEventListener('click', () => { const k = (document.getElementById('template').value || "").toLowerCase(); if (!k) return; msgEl.value = templates[k] || msgEl.value; if (!subjectEl.value) { const base = (k === "collab" ? "Collaboration" : k === "recruiter" ? "Recruiting" : k === "feedback" ? "Feedback" : "Intro"); subjectEl.value = topic ? `${base}: ${topic}` : base } })
-    document.getElementById('buildMail').addEventListener('click', () => { const to = "katisabela125@gmail.com"; const subj = encodeURIComponent(subjectEl.value || "Hello from your site"); const body = encodeURIComponent(msgEl.value || "Hi Katherine —"); window.location.href = `mailto:${to}?subject=${subj}&body=${body}` })
-    document.getElementById('copyAll').addEventListener('click', async () => { const all = `To: katisabela125@gmail.com\nSubject: ${subjectEl.value || "(none)"}\n\n${msgEl.value || ""}`; try { await navigator.clipboard.writeText(all); alert("Copied to clipboard!") } catch { alert("Could not copy, sorry.") } })
+    document.getElementById('applyTemplate').addEventListener('click', () => { const k = (document.getElementById('template').value || "").toLowerCase(); if (!k) return; msgEl.value = templates[k] || msgEl.value; if (!subjectEl.value) { const base = (k === "collab" ? "Collaboration" : k === "recruiter" ? "Recruiting" : k === "feedback" ? "Feedback" : "Intro"); subjectEl.value = topic ? `${base}: ${topic}` : base } });
+    document.getElementById('buildMail').addEventListener('click', () => { const to = "katisabela125@gmail.com"; const subj = encodeURIComponent(subjectEl.value || "Hello from your site"); const body = encodeURIComponent(msgEl.value || "Hi Katherine —"); window.location.href = `mailto:${to}?subject=${subj}&body=${body}` });
+    document.getElementById('copyAll').addEventListener('click', async () => { const all = `To: katisabela125@gmail.com\nSubject: ${subjectEl.value || "(none)"}\n\n${msgEl.value || ""}`; try { await navigator.clipboard.writeText(all); alert("Copied to clipboard!") } catch { alert("Could not copy, sorry.") } });
   </script>
 </body>
 
