fix theming, another approach for driver card

--- a/contact.html
+++ b/contact.html
@@ -12,12 +12,6 @@
     rel="stylesheet">
   <link rel="stylesheet" href="assets/css/base.css">
   <style>
-    body {
-      background-attachment: fixed;
-      background-repeat: no-repeat;
-      background-size: 140% 140%, 150% 150%, 120% 120%
-    }
-
     .page {
       padding: 36px 0 28px
     }
@@ -210,6 +204,10 @@
       margin-top: 8px;
       color: var(--muted);
       font-size: 13px
+    }
+
+    footer {
+      text-align: center
     }
   </style>
 </head>
