--- a/about.html
+++ b/about.html
@@ -12,12 +12,6 @@
     rel="stylesheet">
   <link rel="stylesheet" href="assets/css/base.css">
   <style>
-    body {
-      background-attachment: fixed;
-      background-repeat: no-repeat;
-      background-size: 140% 140%, 150% 150%, 120% 120%
-    }
-
     .page {
       padding: 36px 0 28px
     }
@@ -49,7 +43,7 @@
     }
 
     .card {
-      background: linear-gradient(180deg, rgba(255, 255, 255, .96), rgba(255, 255, 255, .82));
+      background: linear-gradient(180deg, rgba(255, 255, 255, .96), rgba(255, 255, 255, .86));
       border: 1px solid var(--ring);
       border-radius: 16px;
       padding: 18px 20px;
@@ -132,6 +126,10 @@
       100% {
         width: 100%
       }
+    }
+
+    footer {
+      text-align: center
     }
   </style>
 </head>
